Changes added to goat farm next level